# Air_Allen_Analytics

./: .gitignore  pyproject.toml  requirements.txt
configs/: default.yaml
src/nfl_forecast/: data.py
